--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "Nunito", sans-serif;
+}
+.center-form{
+    width: 100%;
+    margin: 5% 30%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ .signup-title{
+    display: block;
+    text-align: center;
+    font-size: 40px;
+    text-decoration: none;
+}
+.signup-title:hover{
+    text-decoration: none;
+}
+.btn-signup, .btn-login{
+    width: 100% !important;
+    background-color: rgb(0, 255, 55) !important;
+    margin-bottom: 10px;
+} */
+
+
+nav .nav-wrapper {
+    background-color: white;
+}
+.input{
+    border-radius: 70px;
+    font-size: 24px;
+    display: block;
+    width: 80%;
+    padding-top: 50px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    margin-top: 10px;
+    color: darkgreen;
+      
+}
+.cloud-margin{
+    padding: 10px;
+}
+.cloud:hover{
+    text-decoration: none;
+}
+.banner1 {
+    padding: 4em 0em;
+    padding-left: 20px;
+}
+.h3-width {
+    width: 100%;
+    /* font-size: 50px; */
+}
+.banner2{
+    width: 110%;
+    padding-top: 5px;
+    padding-right: 30px;
+
+}
+@media screen and (min-width:300px) and (max-width:800px){
+    .banner1 {
+        width: 100%;
+        
+    }
+    
+    .banner2{
+        display: none;
+    }
+
+}
+.movie-logo{
+    font-size: 22px;
+    color: #cb6ad2;
+    font-weight: 900;
+    user-select: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+    .search{
+        height: 40px;
+        min-height: 40px;
+    
+    }
+    .input{
+        border: none;
+        outline: none;
+        border-radius: 50px;
+        border: 1px solid #2c2f39;
+        background: transparent;
+        padding: 10px 16px;
+        width: 200px;
+        /* color: #f9a5ff; */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+    }
+    .input::placeholder{
+        color:#f9a5ff;
+        letter-spacing: 1px;
+    }
+    @media (max-width:860px){
+        .input{
+            width: 220px;
 
-.App-link {
-  color: #61dafb;
-}
+        }
+    }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+    .titleBar {
+        background-color: #000;
+        display: block;
+        color: #fff;
+        padding-left: 16px;
+        margin-bottom: 10px;
+        padding: 15px;
+      }
+
+      
+      .space{
+          padding-bottom: 30px;
+      }
+      
+
+
+
+
+
+
+
+
+
+      
+    
+    
+      
+
+
+
